@@ -478,7 +478,7 @@ $\bullet$ All domains:
 \li{$\bullet$ $E$ defined over $\QQ_p$}{}
 \beginindentedkeys
 \li{residual characteristic}{E.p}
-\li{If $|j|_p>1$: Tate's $[u^2, u, q, [a,b]]$}{E.tate}
+\li{If $|j|_p>1$: Tate's $[u^2, u, q, [a,b], {\cal L}]$}{E.tate}
 \endindentedkeys
 \li{$\bullet$ $E$ defined over $\FF_q$}{}
 \beginindentedkeys
