@@ -221,6 +221,8 @@ reduction (Tate curves):
 
 \fun{GEN}{ellQp_ab}{GEN E, long prec} returns $[a,b]$.
 
+\fun{GEN}{ellQp_L}{GEN E, long prec} returns the ${\cal L}$-invariant $L$.
+
 \fun{GEN}{ellQp_root}{GEN E, long prec} returns $e_1$.
 
 \subsubsec{Curves over a finite field $\F_q$}
