@@ -2499,6 +2499,7 @@ GEN     ellQp_u(GEN E, long prec);
 GEN     ellQp_u2(GEN E, long prec);
 GEN     ellQp_q(GEN E, long prec);
 GEN     ellQp_ab(GEN E, long prec);
+GEN     ellQp_L(GEN E, long prec);
 GEN     ellQp_root(GEN E, long prec);
 GEN     ellR_ab(GEN E, long prec);
 GEN     ellR_eta(GEN E, long prec);
