@@ -162,19 +162,21 @@ all([1]), [Vecsmall([128, -1])], [0, 0, 0, 0, 0, 0, 0, [[2, 3]~]]]
 [3, [3], [[0, 2]]]
 1
 [4, [4], [[Mod(3, 5), Mod(3, 5)]]]
-[1 + 2*3 + 3^2 + 2*3^3 + 3^4 + 3^5 + 2*3^6 + 3^7 + O(3^8), 1 + 3 + 3^3 + 3^4
- + 2*3^5 + 2*3^6 + 2*3^7 + O(3^8), 3 + 2*3^3 + O(3^6), [1 + 2*3 + 3^2 + 2*3^
-3 + 3^4 + 3^6 + 2*3^7 + O(3^8), 1 + 3 + 2*3^2 + 3^3 + 2*3^4 + 2*3^5 + 3^6 + 
-3^7 + O(3^8)]]
-[3^-1 + 2 + 2*3^2 + 2*3^5 + 2*3^6 + O(3^8)]~
-[3^2 + 2*3^3 + 3^4 + 2*3^5 + 3^6 + 3^7 + 2*3^8 + 3^9 + O(3^10), 3 + 3^2 + 3^
-4 + 3^5 + 2*3^6 + 2*3^7 + 2*3^8 + O(3^9), 3 + 2*3^3 + O(3^6), [3^-2 + 2*3^-1
- + 1 + 2*3 + 3^2 + 3^4 + 2*3^5 + O(3^6), 3^-2 + 3^-1 + 2 + 3 + 2*3^2 + 2*3^3
- + 3^4 + 3^5 + O(3^6)]]
+[1 + 2*3 + 3^2 + 2*3^3 + 3^4 + 3^5 + 2*3^6 + 3^7 + 3^8 + 3^9 + O(3^10), 1 + 
+3 + 3^3 + 3^4 + 2*3^5 + 2*3^6 + 2*3^7 + 2*3^9 + O(3^10), 3 + 2*3^3 + 2*3^7 +
+ O(3^8), [1 + 2*3 + 3^2 + 2*3^3 + 3^4 + 3^6 + 2*3^8 + O(3^10), 1 + 3 + 2*3^2
+ + 3^3 + 2*3^4 + 2*3^5 + 3^6 + 3^8 + 2*3^9 + O(3^10)], 2*3^2 + 3^4 + 3^5 + 3
+^6 + O(3^7)]
+[3^-1 + 2 + 2*3^2 + 2*3^5 + 2*3^6 + 2*3^7 + 3^8 + O(3^10)]~
+[3^2 + 2*3^3 + 3^4 + 2*3^5 + 3^6 + 3^7 + 2*3^8 + 3^9 + 3^10 + 3^11 + O(3^12)
+, 3 + 3^2 + 3^4 + 3^5 + 2*3^6 + 2*3^7 + 2*3^8 + 2*3^10 + O(3^11), 3 + 2*3^3 
++ 2*3^7 + O(3^8), [3^-2 + 2*3^-1 + 1 + 2*3 + 3^2 + 3^4 + 2*3^6 + O(3^8), 3^-
+2 + 3^-1 + 2 + 3 + 2*3^2 + 2*3^3 + 3^4 + 3^6 + 2*3^7 + O(3^8)], 2*3^2 + 3^4 
++ 3^5 + 3^6 + O(3^7)]
 error("incorrect type in obj_check (t_VEC).")
 [2 + 2^6 + 2^10 + O(2^11), Mod(x, x^2 + (2 + 2^2 + 2^3 + 2^4 + 2^5 + 2^7 + 2
 ^8 + 2^9 + O(2^11))), 2^3 + 2^4 + O(2^8), [2^-3 + 2^2 + 2^4 + 2^7 + 2^10 + O
-(2^11), 2^-3 + 2^2 + 2^5 + 2^6 + 2^10 + O(2^13)]]
+(2^11), 2^-3 + 2^2 + 2^5 + 2^6 + 2^10 + O(2^13)], 1]
 x^-2 + 31/15*x^2 + 2501/756*x^4 + 961/675*x^6 + 77531/41580*x^8 + O(x^9)
 [5.0000000000000000000000000000000000000, 4.99999999999999999999999999999999
 99998]
@@ -328,7 +330,7 @@ x - 8.6658330059232182300986473411838935307*x^5 + 21.66516806678406090668397
 391807553710802962*I]
 3 + 11^2 + 2*11^3 + 3*11^4 + O(11^5)
 Mod((2 + 3 + O(3^4))*x + (2*3 + 3^2 + O(3^4)), x^2 + (1 + 3 + 2*3^4 + 3^8 + 
-2*3^9 + O(3^10)))
+O(3^9)))
 Mod((1 + 3 + 3^3 + 3^4 + 2*3^6 + 2*3^8 + 2*3^9 + O(3^10))*x + (1 + 3 + 3^2 +
  3^5 + 2*3^6 + 2*3^7 + 2*3^8 + 3^9 + O(3^10)), x^2 + (3 + 3^3 + 2*3^4 + 3^5 
 + 2*3^6 + 3^7 + 2*3^8 + 3^9 + 2*3^10 + 3^11 + 2*3^12 + O(3^13)))
@@ -509,4 +511,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   *** ellformalw: domain error in ellformalw: precision <= 0
 242.47010035195076100129810400142304776
 0
-Total time spent: 728
+Total time spent: 364
