@@ -256,9 +256,9 @@ ELLQp
 .j: 6128487/10351
 .p: 11
 .roots: [9 + O(11^2)]~
-.tate: [6 + 8*11 + 5*11^2 + O(11^4), Mod(x, x^2 + (5 + 2*11 + 5*11^2 + 10*11
-^3 + O(11^4))), 3*11 + 7*11^2 + O(11^4), [6 + 3*11 + O(11^4), 6 + 11 + 9*11^
-2 + 11^3 + O(11^4)]]
+.tate: [6 + 8*11 + 5*11^2 + 8*11^4 + O(11^5), Mod(x, x^2 + (5 + 2*11 + 5*11^
+2 + 10*11^3 + 2*11^4 + O(11^5))), 3*11 + 7*11^2 + O(11^5), [6 + 3*11 + O(11^
+5), 6 + 11 + 9*11^2 + 11^3 + 2*11^4 + O(11^5)], 1]
 FFELT
 .f: 3
 .mod: x^3 + x^2 + 1
@@ -324,4 +324,4 @@ ll([])], Mat([1/2, -1/2])]], [[], [], []]], Mat([0, 1])]
 
 [  0   0 1/6]
 
-Total time spent: 26
+Total time spent: 24
